@@ -1,6 +1,6 @@
 #uploader-controls {margin: 16px 0 8px 8px}
 #uploader-controls select {}
-#uploader {width: 100%; height: 400px; border: none;}
+iframe.uploader {width: 100%; height: 400px; border: none;}
 
 img.uploader_plugin_icon {display: block; float: left; margin: -10px 10px 10px 0}
 p.uploader_license {clear: both; text-align: justify}
